--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   shared_preferences: ^2.2.2
   provider: ^6.0.5
   dio: ^5.3.3
-  connectivity_plus: ^5.0.1
-  internet_connection_checker: ^1.0.0+1
+  connectivity_plus: ^6.1.4
+  internet_connection_checker: ^3.0.1
   flutter_svg: ^2.0.10+1
 
 dev_dependencies:
@@ -51,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
